--- a/index.html
+++ b/index.html
@@ -101,26 +101,32 @@
 
 		<script>
 			var buttons = document.querySelectorAll( '.ladda-button' );
+			var loaders = [];
 
-			Array.prototype.slice.call( buttons ).forEach( function( button ) {
+			Array.prototype.slice.call( buttons ).forEach( function( button, i ) {
+
+				// Create one instance of ladda per button
+				loaders[i] = Ladda.create( button );
 
 				var resetTimeout;
 
 				button.addEventListener( 'click', function() {
 
-					var l = Ladda.create( button ).start();
+					// Toggle the loading animation
+					loaders[i].toggle();
 					
 					clearTimeout( resetTimeout );
 					resetTimeout = setTimeout( function() {
-						l.stop();
+
+						// Stop the loading animation after the timeout expires
+						loaders[i].stop();
+
 					}, 2000 );
 
 				}, false );
 
 			} );
 		</script>
-
-		<a class="fork" href="https://github.com/hakimel/Ladda"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
 
 	</body>
 </html>
