--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="ladda.css">
+		<link rel="stylesheet" href="css/demo.css">
+		<link rel="stylesheet" href="css/ladda.css">
 
 	</head>
 
@@ -97,7 +98,7 @@
 
 		</article>
 
-		<script src="ladda.js"></script>
+		<script src="js/ladda.js"></script>
 
 		<script>
 			var buttons = document.querySelectorAll( '.ladda-button' );
@@ -127,6 +128,8 @@
 
 			} );
 		</script>
+
+		<a class="fork" href="https://github.com/hakimel/Ladda"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
 
 	</body>
 </html>
