--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
 				<button class="ladda-button blue slide-down"><span class="label">Submit</span> <span class="spinner"></span></button>
 			</section>
 
-			<small class="outro">by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+			<footer>
+				<small class="sharing">
+					<a href="http://twitter.com/share" class="twitter-share-button" data-text="Ladda - Buttons with built-in loading indicators by @hakimel" data-url="http://lab.hakim.se/ladda" data-count="small" data-related="hakimel"></a>
+				</small>
+				<small class="outro">by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+			</footer>
 
 		</article>
 
@@ -116,6 +121,8 @@
 		</script>
 
 		<a class="fork" href="https://github.com/hakimel/Ladda"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
+
+		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 	</body>
 </html>
