spinner and label class names prefixed with ladda (closes #2)

--- a/index.html
+++ b/index.html
@@ -34,64 +34,64 @@
 
 			<section>
 				<h3>expand-left</h3>
-				<button class="ladda-button green expand-left"><span class="label">Submit</span></button>
+				<button class="ladda-button green expand-left"><span class="ladda-label">Submit</span></button>
 			</section>
 			
 			<section>
 				<h3>expand-right</h3>
-				<button class="ladda-button green expand-right"><span class="label">Submit</span></button>
+				<button class="ladda-button green expand-right"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>expand-up</h3>
-				<button class="ladda-button green expand-up"><span class="label">Submit</span></button>
+				<button class="ladda-button green expand-up"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>expand-down</h3>
-				<button class="ladda-button green expand-down"><span class="label">Submit</span></button>
+				<button class="ladda-button green expand-down"><span class="ladda-label">Submit</span></button>
 			</section>
 
 
 			<section>
 				<h3>contract</h3>
-				<button class="ladda-button orange contract"><span class="label">Submit</span></button>
+				<button class="ladda-button orange contract"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>contract-overlay</h3>
-				<button class="ladda-button orange contract-overlay" style="z-index: 10;"><span class="label">Submit</span></button>
+				<button class="ladda-button orange contract-overlay" style="z-index: 10;"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>zoom-in</h3>
-				<button class="ladda-button orange zoom-in"><span class="label">Submit</span></button>
+				<button class="ladda-button orange zoom-in"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>zoom-out</h3>
-				<button class="ladda-button orange zoom-out"><span class="label">Submit</span></button>
+				<button class="ladda-button orange zoom-out"><span class="ladda-label">Submit</span></button>
 			</section>
 
 
 			<section>
 				<h3>slide-left</h3>
-				<button class="ladda-button blue slide-left"><span class="label">Submit</span></button>
+				<button class="ladda-button blue slide-left"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>slide-right</h3>
-				<button class="ladda-button blue slide-right"><span class="label">Submit</span></button>
+				<button class="ladda-button blue slide-right"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>slide-up</h3>
-				<button class="ladda-button blue slide-up"><span class="label">Submit</span></button>
+				<button class="ladda-button blue slide-up"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>slide-down</h3>
-				<button class="ladda-button blue slide-down"><span class="label">Submit</span></button>
+				<button class="ladda-button blue slide-down"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<footer>
