rename red button color, add purple button style for progress demos

--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
 
 			<section>
 				<h3>contract</h3>
-				<button class="ladda-button orange contract"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button red contract"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>contract-overlay</h3>
-				<button class="ladda-button orange contract-overlay" style="z-index: 10;"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button red contract-overlay" style="z-index: 10;"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>zoom-in</h3>
-				<button class="ladda-button orange zoom-in"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button red zoom-in"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>zoom-out</h3>
-				<button class="ladda-button orange zoom-out"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button red zoom-out"><span class="ladda-label">Submit</span></button>
 			</section>
 
 
@@ -94,14 +94,16 @@
 				<button class="ladda-button blue slide-down"><span class="ladda-label">Submit</span></button>
 			</section>
 
+			<h3>Built-in progress bar</h3>
+
 			<section class="progress-demo">
-				<h3>expand-right + progress</h3>
-				<button class="ladda-button green expand-right"><span class="ladda-label">Submit</span></button>
+				<h3>expand-right</h3>
+				<button class="ladda-button purple expand-right"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section class="progress-demo">
-				<h3>contract + progress</h3>
-				<button class="ladda-button green contract"><span class="ladda-label">Submit</span></button>
+				<h3>contract</h3>
+				<button class="ladda-button purple contract"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<footer>
