add size options (closes #15)

--- a/index.html
+++ b/index.html
@@ -106,6 +106,28 @@
 				<button class="ladda-button purple contract"><span class="ladda-label">Submit</span></button>
 			</section>
 
+			<h3>Sizes</h3>
+
+			<section class="progress-demo">
+				<h3>Extra Small</h3>
+				<button class="ladda-button mint expand-right" data-size="xs"><span class="ladda-label">Submit</span></button>
+			</section>
+
+			<section class="progress-demo">
+				<h3>Small</h3>
+				<button class="ladda-button mint expand-right" data-size="s"><span class="ladda-label">Submit</span></button>
+			</section>
+
+			<section class="progress-demo">
+				<h3>Large</h3>
+				<button class="ladda-button mint expand-right" data-size="l"><span class="ladda-label">Submit</span></button>
+			</section>
+
+			<section class="progress-demo">
+				<h3>Extra Large</h3>
+				<button class="ladda-button mint expand-right" data-size="xl"><span class="ladda-label">Submit</span></button>
+			</section>
+
 			<footer>
 				<small class="sharing">
 					<a href="http://twitter.com/share" class="twitter-share-button" data-text="Ladda - Buttons with built-in loading indicators by @hakimel" data-url="http://lab.hakim.se/ladda" data-count="small" data-related="hakimel"></a>
