data-* attribute all the things

--- a/index.html
+++ b/index.html
@@ -34,98 +34,98 @@
 
 			<section>
 				<h3>expand-left</h3>
-				<button class="ladda-button green expand-left"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-left"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>expand-right</h3>
-				<button class="ladda-button green expand-right"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-right"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>expand-up</h3>
-				<button class="ladda-button green expand-up"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-up"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>expand-down</h3>
-				<button class="ladda-button green expand-down"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-down"><span class="ladda-label">Submit</span></button>
 			</section>
 
 
 			<section>
 				<h3>contract</h3>
-				<button class="ladda-button red contract"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="contract"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>contract-overlay</h3>
-				<button class="ladda-button red contract-overlay" style="z-index: 10;"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="contract-overlay" style="z-index: 10;"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>zoom-in</h3>
-				<button class="ladda-button red zoom-in"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="zoom-in"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>zoom-out</h3>
-				<button class="ladda-button red zoom-out"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="zoom-out"><span class="ladda-label">Submit</span></button>
 			</section>
 
 
 			<section>
 				<h3>slide-left</h3>
-				<button class="ladda-button blue slide-left"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-left"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>slide-right</h3>
-				<button class="ladda-button blue slide-right"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-right"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>slide-up</h3>
-				<button class="ladda-button blue slide-up"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-up"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section>
 				<h3>slide-down</h3>
-				<button class="ladda-button blue slide-down"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-down"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<h3>Built-in progress bar</h3>
 
 			<section class="progress-demo">
 				<h3>expand-right</h3>
-				<button class="ladda-button purple expand-right"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="purple" data-style="expand-right"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>contract</h3>
-				<button class="ladda-button purple contract"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="purple" data-style="contract"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<h3>Sizes</h3>
 
 			<section class="progress-demo">
 				<h3>Extra Small</h3>
-				<button class="ladda-button mint expand-right" data-size="xs"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="xs"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>Small</h3>
-				<button class="ladda-button mint expand-right" data-size="s"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="s"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>Large</h3>
-				<button class="ladda-button mint expand-right" data-size="l"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="l"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>Extra Large</h3>
-				<button class="ladda-button mint expand-right" data-size="xl"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="xl"><span class="ladda-label">Submit</span></button>
 			</section>
 
 			<footer>
