ids for linking

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<button class="ladda-button" data-color="blue" data-style="slide-down"><span class="ladda-label">Submit</span></button>
 			</section>
 
-			<h3>Built-in progress bar</h3>
+			<h3 id="progress">Built-in progress bar</h3>
 
 			<section class="progress-demo">
 				<h3>expand-right</h3>
@@ -106,7 +106,7 @@
 				<button class="ladda-button" data-color="purple" data-style="contract"><span class="ladda-label">Submit</span></button>
 			</section>
 
-			<h3>Sizes</h3>
+			<h3 id="sizes">Sizes</h3>
 
 			<section class="progress-demo">
 				<h3>Extra Small</h3>
