automatically wrap labels if '.ladda-label' isn't present

--- a/index.html
+++ b/index.html
@@ -34,98 +34,98 @@
 
 			<section>
 				<h3>expand-left</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-left"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-left">Submit</button>
 			</section>
 
 			<section>
 				<h3>expand-right</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-right"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-right">Submit</button>
 			</section>
 
 			<section>
 				<h3>expand-up</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-up"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-up">Submit</button>
 			</section>
 
 			<section>
 				<h3>expand-down</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-down"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="green" data-style="expand-down">Submit</button>
 			</section>
 
 
 			<section>
 				<h3>contract</h3>
-				<button class="ladda-button" data-color="red" data-style="contract"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="contract">Submit</button>
 			</section>
 
 			<section>
 				<h3>contract-overlay</h3>
-				<button class="ladda-button" data-color="red" data-style="contract-overlay" style="z-index: 10;"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="contract-overlay" style="z-index: 10;">Submit</button>
 			</section>
 
 			<section>
 				<h3>zoom-in</h3>
-				<button class="ladda-button" data-color="red" data-style="zoom-in"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="zoom-in">Submit</button>
 			</section>
 
 			<section>
 				<h3>zoom-out</h3>
-				<button class="ladda-button" data-color="red" data-style="zoom-out"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="red" data-style="zoom-out">Submit</button>
 			</section>
 
 
 			<section>
 				<h3>slide-left</h3>
-				<button class="ladda-button" data-color="blue" data-style="slide-left"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-left">Submit</button>
 			</section>
 
 			<section>
 				<h3>slide-right</h3>
-				<button class="ladda-button" data-color="blue" data-style="slide-right"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-right">Submit</button>
 			</section>
 
 			<section>
 				<h3>slide-up</h3>
-				<button class="ladda-button" data-color="blue" data-style="slide-up"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-up">Submit</button>
 			</section>
 
 			<section>
 				<h3>slide-down</h3>
-				<button class="ladda-button" data-color="blue" data-style="slide-down"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="blue" data-style="slide-down">Submit</button>
 			</section>
 
 			<h3 id="progress">Built-in progress bar</h3>
 
 			<section class="progress-demo">
 				<h3>expand-right</h3>
-				<button class="ladda-button" data-color="purple" data-style="expand-right"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="purple" data-style="expand-right">Submit</button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>contract</h3>
-				<button class="ladda-button" data-color="purple" data-style="contract"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="purple" data-style="contract">Submit</button>
 			</section>
 
 			<h3 id="sizes">Sizes</h3>
 
 			<section class="progress-demo">
 				<h3>Extra Small</h3>
-				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="xs"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="xs">Submit</button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>Small</h3>
-				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="s"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="s">Submit</button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>Large</h3>
-				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="l"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="l">Submit</button>
 			</section>
 
 			<section class="progress-demo">
 				<h3>Extra Large</h3>
-				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="xl"><span class="ladda-label">Submit</span></button>
+				<button class="ladda-button" data-color="mint" data-style="expand-right" data-size="xl">Submit</button>
 			</section>
 
 			<footer>
@@ -171,10 +171,6 @@
 			// l.setProgress( 0-1 );
 
 		</script>
-
-		<a class="fork" href="https://github.com/hakimel/Ladda"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
-
-		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 	</body>
 </html>
