--- a/test/bootstrap.html
+++ b/test/bootstrap.html
@@ -6150,13 +6150,13 @@
 			<div class="intro">
 				<h1>Ladda</h1>
 				<p>
-					A UI concept which merges loading indicators into the action that invoked them. Primarily intended for use with forms where 
-					it gives users immediate feedback upon submit rather than leaving them wondering while the browser does its thing. For a 
+					A UI concept which merges loading indicators into the action that invoked them. Primarily intended for use with forms where
+					it gives users immediate feedback upon submit rather than leaving them wondering while the browser does its thing. For a
 					real-world example, check out any of the forms on <a href="http://slid.es">slid.es</a>.
 				</p>
 			</div>
 
-			<section>
+            <section>
 				<h3>expand-left</h3>
 				<button class="btn btn-primary ladda-button" data-color="green" data-style="expand-left"><span class="ladda-label">Submit</span></button>
 			</section>
@@ -6235,6 +6235,19 @@
 			<section class="progress-demo">
 				<h3>Large</h3>
 				<button class="btn btn-danger btn-large ladda-button" data-color="mint" data-style="expand-right" data-size="l"><span class="ladda-label">Submit</span></button>
+			</section>
+
+            <h3>Buttons in forms containing required inputs</h3>
+
+			<section>
+                <form>
+                    <div class="form-group">
+                        <input type="text" required name="aText" placeholder="Please fill me" />
+                    </div>
+                    <div class="form-group">
+                        <button id="aFormSubmitButton" type="submit" class="btn btn-primary ladda-button" data-color="green" data-style="expand-left"><span class="ladda-label">Submit</span></button>
+                    </div>
+                </form>
 			</section>
 
 			<footer>
