Load dist-version of JS in html sample of jQuery version

--- a/test/bootstrap.jquery.html
+++ b/test/bootstrap.jquery.html
@@ -6261,7 +6261,7 @@
 		<script src="../dist/spin.min.js"></script>
 		<script src="../dist/ladda.min.js"></script>
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="../js/ladda.jquery.js"></script>
+        <script src="../dist/ladda.jquery.min.js"></script>
 
 		<script>
 
