adding number of lines as a possible configuration

--- a/test/bootstrap.html
+++ b/test/bootstrap.html
@@ -6237,6 +6237,23 @@
 				<button class="btn btn-danger btn-large ladda-button" data-color="mint" data-style="expand-right" data-size="l"><span class="ladda-label">Submit</span></button>
 			</section>
 
+			<h3 id="lines">Number of lines</h3>
+
+			<section>
+				<h3>8 lines</h3>
+				<button class="btn btn-primary ladda-button" data-style="zoom-out" data-color="mint" data-spinner-lines="8"><span class="ladda-label">Submit</span></button>
+			</section>
+
+			<section>
+				<h3>Default (12 lines)</h3>
+				<button class="btn btn-primary ladda-button" data-style="zoom-out" data-color="mint"><span class="ladda-label">Submit</span></button>
+			</section>
+
+			<section>
+				<h3>16 lines</h3>
+				<button class="btn btn-primary ladda-button" data-style="zoom-out" data-color="mint" data-spinner-lines="16"><span class="ladda-label">Submit</span></button>
+			</section>
+
 			<h3>Buttons in forms containing required inputs</h3>
 
 			<section>
