Switch to spin.js v4 and drop support for IE 9

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
 
 			<section class="button-demo">
 				<h3>expand-left</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-left">Submit</button>
+				<button data-color="green" data-style="expand-left">Submit</button>
 			</section>
 
 			<section class="button-demo">
 				<h3>expand-right</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-right">Submit</button>
+				<button data-color="green" data-style="expand-right">Submit</button>
 			</section>
 
 			<section class="button-demo">
 				<h3>expand-up</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-up">Submit</button>
+				<button data-color="green" data-style="expand-up">Submit</button>
 			</section>
 
 			<section class="button-demo">
 				<h3>expand-down</h3>
-				<button class="ladda-button" data-color="green" data-style="expand-down">Submit</button>
+				<button data-color="green" data-style="expand-down">Submit</button>
 			</section>
 
 
