Replace Bootstrap 2 test with Bootstrap 5 test

--- a/site/form.html
+++ b/site/form.html
@@ -14,9 +14,9 @@
 				<p>
 					This page can be used to test that Ladda does NOT start spinning when submitting an invalid form.
 				</p>
-				<form action="">
-					<input type="email" required placeholder="Email address..." style="font-size: 1em; padding: 14px;">
-					<button type="submit" class="btn btn-primary ladda-button" data-color="green" data-style="expand-left"><span class="ladda-label">Submit</span></button>
+				<form action="https://example.com">
+					<input type="email" name="email" placeholder="Email address..." style="font-size: 1em; padding: 14px;" required>
+					<button type="submit" class="ladda-button" data-color="green" data-style="expand-left">Submit</button>
 				</form>
 			</div>
 		</article>
